@@ -30,6 +30,8 @@ no_index:
     - xt
 requires:
   Plack::Component::Tags::HTML: 0.15
+  Plack::Request: 0
+  Plack::Response: 0
   Plack::Session: 0
   Plack::Util::Accessor: 0
   Tags::HTML::Container: 0
