@@ -1,5 +1,6 @@
 0.02
  - Add support of autofocus.
+ - Add support of login process.
  - Add support of messages.
  - Improve constructor parameters in doc.
  - Update tests to independent of package version.
